# NewtonGrid

./: CMakeLists.txt  README.md
ci/: github-actions.yml
docs/: design.md  user_guide.md  validation.md
examples/configs/: single_mass.json
src/: NewtonGrid.cpp  main.cpp
src/data/: FieldData.hpp  grid.hpp
src/io/: VTIWriter.hpp
src/physics/: GravitationalField.hpp  gravitational_field.hpp
src/tests/: CMakeLists.txt  test_single_mass.cpp
